# communicator-with-GUI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker_check.yml  docker_image_create_publish.yml  integrate.yml
cli/: CMakeLists.txt  main.cpp
cli/include/: CLI.hpp
cli/src/: CLI.cpp
client/: CMakeLists.txt  main.cpp
client/include/: ClientApp.hpp  ClientContext.hpp
client/src/: ClientApp.cpp
cmake/: boost.cmake  protobuf.cmake  zmq.cmake
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/core/: Receiver.hpp  Sender.hpp
libs/core/src/core/: Receiver.cpp  Sender.cpp
libs/messages/: CMakeLists.txt
libs/messages/include/messages/: ConnectionDisconnection.hpp  ConnectionRequest.hpp  ConnectionRequestAccept.hpp  ConnectionRequestAcceptAck.hpp  ConnectionRequestRefuse.hpp  Data.hpp  Message.hpp  Null.hpp
libs/network/: CMakeLists.txt
libs/network/include/network/: BaseSocket.hpp  ISocket.hpp  ListenSocket.hpp  Socket.hpp
libs/network/src/network/: BaseSocket.cpp  ISocket.cpp  ListenSocket.cpp  Socket.cpp
libs/types/: CMakeLists.txt
libs/types/include/types/: Buffer.hpp  Cause.hpp  ClientID.hpp  Data.hpp  EpollFD.hpp  FD.hpp  IP.hpp  NFDS.hpp  Port.hpp  SocketFD.hpp  TransactionId.hpp  UUID.hpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: ErrorHandler.hpp  Overload.hpp
proto/: main.proto  messages.proto  types.proto
scripts/: formatter.sh
server/: CMakeLists.txt  main.cpp
server/include/: Epoll.hpp  ErrorCode.hpp  ServerApp.hpp  ServerContext.hpp  Socket.hpp  SocketCreator.hpp  TCPSocket.hpp  TCPSocketCreator.hpp
server/include/builders/: ConcreteNetworkCreator.hpp  NetworkCreator.hpp
server/src/: Epoll.cpp  ServerApp.cpp  TCPSocket.cpp  TCPSocketCreator.cpp
server/src/builders/: ConcreteNetworkCreator.cpp
